k8s/verification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verification-service
  labels:
    app: verification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: verification-service
  template:
    metadata:
      labels:
        app: verification-service
    spec:
      containers:
        - name: verification-service
          image: verification-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3001
          volumeMounts:
            - name: verification-data
              mountPath: /data
      volumes:
        - name: verification-data
          emptyDir: {}
