k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-credential-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /issuance(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: issuance-service
                port:
                  number: 3000
          - path: /verification(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: verification-service
                port:
                  number: 3001
